@@ -49,6 +49,8 @@ Build system
 
 ### Cmake
 
+- new target to 'doc' to build documentation
+
 ### Makefile
 
 Fixed bugs
